apps/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
