apps/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.pedrocoutinho.eu`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: homelab-wildcard-tls
